# SRIP

./: .gitignore  CMakeLists.txt  README.md
firmware/: xiao.ino
src/: ble.cpp  ble.hpp  cap.cpp
validation/: index.html  package-lock.json  package.json  server.js
